	 'serialise signature parameters' into two functions
	 (libspectrum_0_1_0pre1-crypto-branch)
20030811 rzx.c: skip links to external snapshots
	 (libspectrum_0_1_0pre1-crypto-branch)
20030812 add support for RZX competition codes
	 (libspectrum_0_1_0pre1-crypto-branch)
20030813 Merge the digitial signatures branch (at
	 libspectrum_0_1_0pre1-crypto-branch-2) onto HEAD (at
	 libspectrum_0_2_0pre1-merge-1)
20030813 libspectrum.c: improve gcrypt initialisation code
20030814 Set sensible defaults for all fields of libspectrum_snap on
	 allocation, rather than forcing every snapshot load routine
	 to set these.
20030817 Add capability for Kempston joystick ports
20030817 szx.c: add SCLD block to contain Timex SCLD registers (Fred)
20030821 rzx.c: allocate memory for the competition code
20030821 rzx.c: fix memory links (thanks, valgrind)
20030822 crypto.c, libspectrum.h.in: add libspectrum_signature_free()
20030824 rzx.c: small valgrind-related tidyups
20030901 libspectrum.c: define MIN_GCRYPT_VERSION iff it's going to be
	 used
20030908 ChangeLog: add release date of 0.1.1.
20030908 ChangeLog: bring up to date.
20030912 doc/libspectrum.txt: bring general and snapshot routine
         documentation up to date.
20030912 doc/libspectrum.txt: document the RZX digital signature routines.
20030912 libspectrum.h.in, z80.c: move libspectrum_slt_type from
         libspectrum.h.in to z80.c.
20030912 doc/libspectrum.txt: document the tape routines.
20030912 ChangeLog, README: small doc updates for the 0.2.0 release.
20030913 Makefile.am: distribute generate.pl.in, tape_accessors.pl,
	 tape_set.pl and tape_block.h.
20030918 rzx.c: if count is zero in libspectrum_rzx_store_frame, don't
	 try to allocate zero bytes.
20030919 configure.in: link against glib, gcrypt and zlib if available
	 (Darren).
20030921 crypto.c, libspectrum.c, rzx.c: use libgcrypt 1.1.42.
20030922 crypto.c: use gcry_pk_testkey to test secret key sanity.